--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@
         const fallback = {
           tools: [
             {
-              name:"Tool Đơn Khởi Kiện (ĐKK)",
+              name:"Tool Đơn Khởi Kiện Tín Chấp (ĐKK)",
               status:"LIVE",
               icon:"fa-gavel",
               desc:"Tải tool ĐKK dạng .zip",
@@ -325,7 +325,7 @@
               tags:["zip"]
             },
             {
-              name:"Tool Bảng Tự Khai (BTK)",
+              name:"Tool Bảng Tự Khai Tín Chấp (BTK)",
               status:"LIVE",
               icon:"fa-file-contract",
               desc:"Tải tool BTK dạng .zip",
