--- a/index.html
+++ b/index.html
@@ -270,7 +270,7 @@
         </div>
       </div>
 
-      <details class="notesToggle" open>
+      <details class="notesToggle">
         <summary>
           <span><i class="fa-solid fa-circle-info"></i> Hướng dẫn xử lý Protected View & tạo lại hồ sơ</span>
           <span class="chev"><i class="fa-solid fa-chevron-down"></i></span>
